fixed alignment in css
alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,14 +1,3 @@
-/* .header {
-    margin-bottom: 15px;
-    padding: 15px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    font-family: 'Baloo 2', cursive;
-    justify-content: space-between;
-   } */
-
 body {
     display: flex;
     flex-direction: column;
@@ -29,16 +18,25 @@ h1 {
     flex: 0 1 auto;
     border-radius: 4px;
     max-width: 800px;
-    margin: 0px;
-    padding: 0px;
-    border: none;
     background: linear-gradient(#658eda, #da91ec);
-    list-style-type: none;
+    padding-bottom: 10px;
+
 }
 .textinput {
     width: 800px;
+    height: 30px;
 }
 
+ul,li { 
+    list-style-type: none;
+    list-style-position:inside;
+    margin:0;
+    padding:0; 
+    padding-top: 10px;
+}
+p, h2 {
+    margin: 8px;
+}
 
 @media screen and (max-width: 550px) {
     .textinput {
